--- a/SSC0124_APOO/01-PU.md
+++ b/SSC0124_APOO/01-PU.md
@@ -11,10 +11,11 @@ Vai ter um **ator**, que vai utilizar o sistema (não obrigatoriamente vai ser u
 Um caso de uso é a utilização do *sistema* pelo *ator*. É, basicamente, uma funcionalidade do sistema - vai narrar a interação entre o sistema e os atores envolvidos.
 
 ```
-    O 			    	O  		/---------\
+    O                   O       /---------\
    /|\   - - - - - - - /|\ - - -|vender   |
-   	|					|       | produto |
-   / \				   / \		\ ________/
- cliente			atendente
+    |                   |       | produto |
+   / \                 / \      \ ________/
+ cliente            atendente
 ```
 
+Muitas vezes é utilizado como um contrato entre desenvolvedor e cliente.
