--- a/SSC0540_Redes/01.md
+++ b/SSC0540_Redes/01.md
@@ -53,7 +53,11 @@ TCP/IP, protocolos, e-mail, browser, ...
 
 Aplicações usando TCP: HTTP (Web), FTP (file transfer), SMTP (email), ...
 
+- tem confirmação
+
 Aplicações usando UDP: streaming media, teleconferência, telefonia IP, ...
+
+- Software mais robusto fica na borda - google chrome não roda no núcleo
 
 ## Núcleo da Rede
 
@@ -65,11 +69,14 @@ Aplicações usando UDP: streaming media, teleconferência, telefonia IP, ...
 
 ### Formas de transferir dados na rede:
 
-- Comutação de circuitos (usa um canal para cada conexão) - ex: dirigir com uma rota fixa, definida no começo. Pode ser feita com FDM (frequência) e TDM (tempo).
+- Comutação de circuitos (usa um canal para cada conexão) - usa um canal dedicado desde o começo - ex: dirigir com uma rota fixa, definida no começo. Pode ser feita com FDM (frequência) e TDM (tempo).
+*  * **Vantagens**: exclusividade, garante serviço
+*  * **Desvantagens**: pode ser que alguém esteja reservando e não usando
 
 - Comutação de pacotes (dados são enviados em "blocos" discretos) - ex: dirigir com mudança de rotas dinamicamente
-
 *  * Cada fluxo é dividido em pacotes (cada pacote toma uma rota menos congestionada)
+*  * **Vantagens**: pouco desperdício
+*  * **Desvantagens**: alguns serviços podem ficar unitilizáveis
 
 ### Roteamento
 
@@ -84,3 +91,32 @@ Aplicações usando UDP: streaming media, teleconferência, telefonia IP, ...
 - Cada pacote leva um número (virtual circuit ID), o número determina o próximo salto
 - O caminho é fixo e escolhido no instante de estabelecimento da conexão, permanece fixo durante toda a conexão.
 - Analogia: dirigir já sabendo a rota
+
+# Camadas
+
+- Tipo módulos
+
+Redes de computadores (OSI)
+
+- Aplicação
+- Apresentação
+- Sessão
+- Transporte
+- Rede
+- Enlace
+- Física
+
+Internet
+				; pacote:
+- Aplicação		; mensagem
+- Transporte	; segmento
+- Rede 			; datagrama
+- Enlace 		; quadro/frame 		software ^
+- Física							hardware
+
+
+# Miscelânea
+
+- ```netstat -o```
+
+- colocar confiabilidade no UDP: camada de aplicação
